# cs6610

./: .gitignore  Cargo.toml  README.md  notes.org
.github/workflows/: ci.yaml
assets/: .gitignore  README  teapot.mtl
common/: Cargo.toml
common/src/: axis.rs  gl_boilerplate.rs  glium_helper.rs  lib.rs  math.rs  mesh.rs  obj_loader.rs  render.rs
project-01-hello-world/: Cargo.toml
project-01-hello-world/src/: README  main.rs
project-02-transformations/: Cargo.toml  README
project-02-transformations/assets/: shader.frag
project-02-transformations/src/: main.rs
project-03-shading/: Cargo.toml  README
project-03-shading/assets/: mesh.frag  mesh.vert  shader.vert
project-03-shading/src/: light.rs  main.rs  mesh.rs  teapot.rs
project-04-textures/: Cargo.toml  README
project-04-textures/assets/: mesh.frag  mesh.vert  shader.frag  shader.vert
project-04-textures/src/: light.rs  main.rs  mesh.rs  object.rs  teapot.rs
project-05-render-buffers/: Cargo.toml  README
project-05-render-buffers/assets/: shader.frag  shader.vert
project-05-render-buffers/src/: main.rs  mesh.rs  object.rs
project-06-environment-mapping/: Cargo.toml  README
project-06-environment-mapping/assets/: camera_plane.frag  camera_plane.vert  reflective.frag  reflective_object.frag  reflective_plane.frag  shader.vert
project-06-environment-mapping/src/: background.rs  camera.rs  main.rs  mesh.rs  object.rs  reflective_object.rs  reflective_plane.rs  scene.rs
project-07-shadow-mapping/: Cargo.toml  README
project-07-shadow-mapping/assets/: object.frag  object.vert  shadow.vert
project-07-shadow-mapping/src/: camera.rs  light.rs  main.rs  mesh.rs  object.rs  scene.rs  transform.rs
project-08-tessellation/: Cargo.toml  README
project-08-tessellation/assets/: object.vert  preview.frag  preview.vert  quad_parallax.frag  quad_parallax.vert  shadow.frag  tess_obj.frag  tess_obj.geom  tess_obj.tcs  tess_obj.tes  tess_obj.vert  tess_obj_wf.frag
project-08-tessellation/src/: camera.rs  light.rs  main.rs  object.rs  scene.rs  teapot_quad.rs  transform.rs
