[package]
name = "cs5610"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "common",
  "project-01-hello-world",
  "project-02-transformations",
  "project-03-shading",
  "project-04-textures",
]

[workspace.dependencies]
cgmath = "0.18.0"
glium = "0.34.0"
raw-window-handle = "0.5"
winit = "0.29.15"
image = "0.25.2"
