[package]
name = "cs5610"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "common",
  "project-01-hello-world",
  "project-02-transformations",
  "project-03-shading",
  "project-04-textures",
  "project-05-render-buffers",
  "project-06-environment-mapping",
  "project-07-shadow-mapping"
]

[workspace.dependencies]
cgmath = "0.18.0"
glium = { git = "https://github.com/shouya/glium", branch = "border-color-for-sampler" }
raw-window-handle = "0.5"
winit = "0.29.15"
image = "0.25.2"
anyhow = { version = "1.0.86", features = ["backtrace"] }
genmesh = "0.6.2"
glam = "0.28.0"

[profile.dev.package.common]
opt-level = 2

# override glium to use my own fork
[patch.crates-io]
